Adjusted css to center gallery, Added embedded google form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="navbar">
+		<!--<div class="navbar">
 			<div class="navbar-inner">
 				<a class="brand" href="/">One slice short</a>
 				<ul class="nav">
@@ -16,7 +16,7 @@
 					<li><a href="gallery.html">Gallery</a></li>
 				</ul>
 			</div>
-		</div>
+		</div>-->
 		<div class="row-fluid">
 			<!--<div class="span3">
 				<ul class="thumbnails well well-small">
@@ -37,23 +37,27 @@
 					<small>Homemade cakes and pastries</small>
 					</h1>
 				</div>
-				<div id="carousel" class="carousel slide" style="width:50%"> 
-					<div class="carousel-inner">
-						<div class="active item" style="background-image: url(img/tombstone.jpg)">
-							<!--<img src="img/tombstone.jpg"/>-->
-							<!--<div class="carousel-caption">
-								Tombstone cake.	
-							</div>-->
+				<div style="text-align: center;">
+					<div id="carousel" class="carousel slide" style="width: 50%; display: inline-block;" > 
+						<div class="carousel-inner">
+							<div class="active item" style="background-image: url(img/the_best/scooby.JPG)">
+							</div>
+							<div class="item" style="background-image: url(img/the_best/spongebob.JPG)">
+							</div>
+							<div class="item" style="background-image: url(img/the_best/smiley.JPG)">
+							</div>
+							<div class="item" style="background-image: url(img/the_best/fifty.JPG)">
+							</div>
+							<div class="item" style="background-image: url(img/the_best/horse.JPG)">
+							</div>
+							<div class="item" style="background-image: url(img/the_best/cupcake.JPG)">
+							</div>
+							<div class="item" style="background-image: url(img/the_best/batman.JPG)">
+							</div>
 						</div>
-						<div class="item" style="background-image: url(img/oven.jpg)">
-							<!--<img src="img/oven.jpg" />-->
-							<!--<div class="carousel-caption">
-								This is a test of the broadcasting system. Oven.
-							</div>-->
-						</div>
-					</div>
 					<a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
 					<a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
+					</div>
 				</div>
 			</div>
 
@@ -61,11 +65,9 @@
 		<div class="row-fluid">
 			<div class="span3 well">
 			</div>
-			<div class="span3 well">
-			</div>
-			<div class="span3 well">
-			</div>
-			<div class="span3 well">
+			<!--Embedded google form -->
+			<div class="span9 well">
+				<iframe src="https://docs.google.com/a/onesliceshort.com/spreadsheet/embeddedform?formkey=dHBiNHpEWEgxVFEyLTUtc1N0QTY0TWc6MQ" width="760" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 			</div>
 		</div>
 	</div>
