--- a/index.html
+++ b/index.html
@@ -18,19 +18,6 @@
 			</div>
 		</div>-->
 		<div class="row-fluid">
-			<!--<div class="span3">
-				<ul class="thumbnails well well-small">
-					<li>
-						<h5>In the northern Chicago suburbs?</h5>
-						<h5>Want a cake or pastry?</h5>
-						<form>
-							<legend>Contact Us</legend>
-							<input type="text" placeholder="Email" style="width:90%" >
-							<button type="submit" class="btn">Submit</button>
-						</form>
-					</li>
-				</ul>
-			</div>-->
 			<div class="span12">
 				<div class="page-header">
 					<h1>One Slice Short<br />
@@ -64,10 +51,15 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span3 well">
+				<h5>In the northern Chicago suburbs?</h5>
+				<h5>Need a cake or pastry for your next event?</h5>
+				<h5><a href="order.html">Order now</a></h5>
+			</div>	
+			<div class="span3 well">
+				We can make all sorts of flavors and sizes.
 			</div>
-			<!--Embedded google form -->
-			<div class="span9 well">
-				<iframe src="https://docs.google.com/a/onesliceshort.com/spreadsheet/embeddedform?formkey=dHBiNHpEWEgxVFEyLTUtc1N0QTY0TWc6MQ" width="760" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			<div class="span3 well">
+				Characters are not off limit! Please let us know, so we can accomodate you.
 			</div>
 		</div>
 	</div>
